[package]
name = "bevy_fact_rule_event"
version = "0.3.0"
edition = "2024"
authors = ["Bli-AIk <haikun2333@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Bli-AIk/bevy_fact_rule_event"
readme = "readme.md"
description = "Fact-Rule-Event system for Bevy engine"
keywords = ["bevy", "rules-engine", "fact", "event-driven", "data-driven"]
categories = ["game-development"]
exclude = [
    "target/*",
    ".github/*"
]

[dependencies]
bevy = { version = "0.18", default-features = false, features = [
    "std",
    "bevy_asset",
    "bevy_log",
    "reflect_auto_register",
] }
serde = { version = "1.0", features = ["derive"] }
ron = "0.12"
anyhow = "1.0"
